--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,20 +1,19 @@
 name: exam-laravel
 type: laravel
-docroot: ""
+docroot: public
 php_version: "8.3"
 webserver_type: nginx-fpm
 xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-    type: mariadb
-    version: "10.11"
+  type: mariadb
+  version: "10.11"
 performance_mode: none
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
 corepack_enable: false
-
 # Key features of DDEV's config.yaml:
 
 # name: <projectname> # Name of the project, automatically provides
